--- a/newsportal/templates/flatpages/default.html
+++ b/newsportal/templates/flatpages/default.html
@@ -31,9 +31,21 @@
                <li class="nav-item">
                    <a class="nav-link" href="/news/">Новости</a>
                </li>
+               {%if not request.user.is_authenticated %}
+               <li class="nav-item">
+                   <a class="nav-link" href="/accounts/login">Вход/Регистрация</a>
+               </li>
+               {% endif %}
+               {%if request.user.is_authenticated %}
+               <li class="nav-item">
+                   <a class="nav-link" href="/accounts/logout">Выход</a>
+               </li>
+               {% endif %}
+               {% if perms.news.add_post %}
                <li class="nav-item">
                    <a class="nav-link" href="/create/">Написать новость</a>
                </li>
+               {% endif %}
                <li class="nav-item">
                    <a class="nav-link" href="/search/">Поиск</a>
                </li>
